tests/baselines/reference/fuzzy.errors.txt
0.ts line 25 col 19: error TS211: Cannot convert '{ oneI: M.C; }' to 'M.R'.
0.ts line 25 col 19: error TS211: Cannot convert '{ oneI: M.C; }' to 'M.R'.
